--- a/src/modules/chatWindow/chatWindow.scss
+++ b/src/modules/chatWindow/chatWindow.scss
@@ -2,6 +2,7 @@
 
 .chat-window {
   max-height: 100vh;
+
   .message-list-container {
     border: 2px solid $mediumGray;
     border-radius: 20px;
@@ -10,6 +11,7 @@
     height: 70vh;
     overflow-y: auto;
   }
+
   .typing-indicator-container {
     padding: 10px;
     margin: 10px;
@@ -17,51 +19,62 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     .typing-indicator {
       color: $silver;
       font-size: 1rem;
     }
   }
+
   .message-input-outer-container {
     display: flex;
     justify-content: center;
     margin: 10px;
     // border-top: 2px solid $mediumGray;
     // border: 2px solid $mediumGray;
+
     .message-input-inner-container {
       // border: 2px solid $mediumGray;
       padding: 10px;
       position: relative;
       display: flex;
       align-items: center;
+
       .message-input {
         .MuiOutlinedInput-root {
           width: 40vw;
           min-width: 280px;
           border-radius: 20px;
           border-width: 10px;
+
           .MuiOutlinedInput-notchedOutline {
             border-width: 2px;
           }
+
           &:hover {
             .MuiOutlinedInput-notchedOutline {
               border-color: $primaryColor;
             }
           }
         }
+
         .open-emoji-button {
           background-color: $lightGray;
+
           .insert-emoji-icon {
             color: $primaryColor;
           }
         }
       }
+
       .send-message-button {
         padding: 10px;
         margin: 0 10px;
         background-color: $lightGray;
         border: none;
-        .send-message-icon {
+
+        .send-message-icon,
+        .done-message-icon {
           color: $primaryColor;
         }
       }
