--- a/src/components/messageList/messageList.scss
+++ b/src/components/messageList/messageList.scss
@@ -5,4 +5,29 @@
   flex-direction: column;
   overflow-y: auto;
   height: 100%;
+  position: static !important;
+
+  .floating-unread-message-banner {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 10px 0;
+    padding: 8px;
+    background-color: $primaryColor;
+    color: $white;
+    border-radius: 16px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  .unread-message-banner {
+    text-align: center;
+    margin: 10px 0;
+    padding: 8px;
+    color: $silver;
+    font-size: 14px;
+  }
 }
