--- a/src/components/accountMenu/accountMenu.scss
+++ b/src/components/accountMenu/accountMenu.scss
@@ -1,7 +1,7 @@
-@import "../../assets/scss/variables";
+@use "../../assets/scss/variables";
 
 .account-menu {
   .current-user-avatar {
-    border: 2px solid $white;
+    border: 2px solid variables.$white;
   }
 }
