--- a/src/components/loginForm/loginForm.scss
+++ b/src/components/loginForm/loginForm.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/variables";
+@use "../../assets/scss/variables";
 
 .login-page {
   // min-height: 100vh;
@@ -11,7 +11,7 @@
     padding: 8px;
     // min-width: 25%;
     width: 350px;
-    // box-shadow: 5px 5px 4px $mediumGray !important;
+    // box-shadow: 5px 5px 4px variables.$mediumGray !important;
 
     .login-card-content {
       display: flex;
@@ -34,7 +34,7 @@
 
           &:hover {
             .MuiOutlinedInput-notchedOutline {
-              border-color: $primaryColor;
+              border-color: variables.$primaryColor;
             }
           }
         }
@@ -51,9 +51,9 @@
 
       .generate-room-button,
       .join-room-button {
-        background-color: $primaryColor;
+        background-color: variables.$primaryColor;
         padding: 8px 16px;
-        color: $white;
+        color: variables.$white;
         border-radius: 20px;
 
         &:disabled {
