--- a/src/components/snackbar/snackbar.scss
+++ b/src/components/snackbar/snackbar.scss
@@ -1,8 +1,8 @@
-@import "../../assets/scss/variables";
+@use "../../assets/scss/variables";
 
 .snackbar {
   .MuiSnackbarContent-root {
-    color: $white;
-    background-color: $primaryColor;
+    color: variables.$white;
+    background-color: variables.$primaryColor;
   }
 }
