refactored the code

--- a/src/components/loginForm/loginForm.scss
+++ b/src/components/loginForm/loginForm.scss
@@ -21,6 +21,7 @@
       .room-id-input,
       .password-input {
         margin: 10px 0;
+        width: 100%;
 
         .MuiOutlinedInput-root {
           border-radius: 20px;
