--- a/src/components/registerForm/registerForm.scss
+++ b/src/components/registerForm/registerForm.scss
@@ -20,6 +20,7 @@
       .user-name-input,
       .password-input {
         margin: 10px 0;
+        width: 100%;
 
         .MuiOutlinedInput-root {
           border-radius: 20px;
