--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,7 +1,20 @@
+@use "../assets/scss/variables";
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   user-select: none;
+}
+
+.not-found {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  p {
+    color: variables.$primaryColor;
+    font-size: 1.5rem;
+  }
 }
